--- a/Website/Experience.html
+++ b/Website/Experience.html
@@ -29,6 +29,7 @@
                 <ul class="nav navbar-nav">
                 <li><a href="index.html#profile">Profile</a></li>
                 <li class="active"><a href="Experience.html">Experience</a></li>
+                <li><a href="Projects.html">Projects</a></li>
                 </ul>
             </div>
         </nav>
