--- a/Website/index.html
+++ b/Website/index.html
@@ -37,6 +37,7 @@
                 <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html#profile">Profile</a></li>
                 <li><a href="Experience.html">Experience</a></li>
+                <li><a href="Projects.html">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -73,14 +74,21 @@
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#mefuCarousel" data-slide-to="0" class="active"></li>
-
+    <li data-target="#mefuCarousel" data-slide-to="1"></li>
+    <li data-target="#mefuCarousel" data-slide-to="2"></li>
 
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <div class="carousel-inner" role="listbox" style=" width:100%; max-height:50%;">
     <div class="item active">
-      <img src= "css/images/IMG_2676.JPG" alt="dank" style="max-width:50%; max-height:50%;" class="rotateimg90"/>
+      <img src= "css/images/IMG_2676.JPG" alt = "CAA" style= "max-height:25vw" class="rotateimg90"/>
+    </div>
+    <div class="item">
+    <img src="css/images/IMG_2623.JPG" alt="Macau"  style="; max-height:25vw;" class="rotateimg90";>
+    </div>
+    <div class="item">
+      <img src="css/images/canvas.png" alt="NYC" style="max-height:25vw;">
     </div>
   </div>
 
