--- a/Website/Projects.html
+++ b/Website/Projects.html
@@ -5,7 +5,7 @@
         <meta name="Matthew Wu" content="width=device-width, initial-scale=1">
               
     <!-- local css-->   
-        <link rel="stylesheet" href="css/bootstrap2.css">
+        <link rel="stylesheet" href="css/bootstrap3.css">
         
     <!-- script -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -33,4 +33,18 @@
             </div>
         </nav>
  <!-- Navigation ends here, content start now -->
- 
+ <!-- background cover for projects page -->
+  <div class="bgimg3" id ="bgimg3">
+    <!-- grid layout for downloadable projects-->
+     <div class="row-eq-height" style= "padding-top: 200px; padding-left: 25%; padding-right: 25%;">
+        <!-- grid 1 for calculator-->
+        <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
+            <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png" style = "position:relative; height:100%;"></a></div>
+            <!-- grid 2 for io-->
+            <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
+            <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png" style = "position:relative;  min-height:50%"></a></div>
+                <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
+                    <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png"style = "position:relative; padding:15%; min-height:100%"></a></div>
+                    <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
+
+                    <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png"style = "position:relative; padding:5%; height:90%"></a></div>
