--- a/Website/Projects.html
+++ b/Website/Projects.html
@@ -11,14 +11,17 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://use.fontawesome.com/2d089818e9.js"></script>
-    <!-- title -->
+        <script src="jszip.min.js"></script>
+        <script src="FileSaver.min.js"></script>
+        <script src="script.js"></script>
+        <!-- title -->
         <title>Matthew W.L. Wu - Portfolio</title>
     <!--style-->
      <style>
      </style>
     <!-- fonts -->
     </head>
-    <body>
+    <body style = "background-color: black;">
  <!---- Navigation Header START ---->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -34,17 +37,39 @@
         </nav>
  <!-- Navigation ends here, content start now -->
  <!-- background cover for projects page -->
-  <div class="bgimg3" id ="bgimg3">
+  <div style = "position:relative; width:100%; text-align: center;">
+        <!-- header to describe download functionality-->
+        <div class = "row" style= " width:50%; position:relative; padding-top: 75px; padding-bottom: 25px; margin-left: 26%; text-align: center;  background-color: black;">
+        <h1 style = "color:white; font-size: 26pt"> Hover for info, Click to select</h1>
+    </div>
     <!-- grid layout for downloadable projects-->
-     <div class="row-eq-height" style= "padding-top: 200px; padding-left: 25%; padding-right: 25%;">
+     <div class="row-eq-height" id ="bgimg3" style = "border-style: dotted; border-color: black; padding-top: 5%; padding-bottom: 5%; padding-left: 25%; padding-right: 25%;">            
         <!-- grid 1 for calculator-->
-        <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
-            <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png" style = "position:relative; height:100%;"></a></div>
+        <div class = "col-lg-4" style = "margin: 5%;">
+            <div class ="container">
+            <img src = "css/images/zip-folder.png" style = "position:relative; height:12vw;">
+                <div class = "cover">
+                <p class = "desc"> <span class = "aTitle">Java Calculator with GUI </span><br><br> Exception/event handling, operations</p>
+            </div>
+            </div>
+        </div>
             <!-- grid 2 for io-->
-            <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
-            <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png" style = "position:relative;  min-height:50%"></a></div>
-                <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
-                    <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png"style = "position:relative; padding:15%; min-height:100%"></a></div>
-                    <div class = "col-lg-4" style = "border-style: solid; border-color: black;">
-
-                    <a href = projects/Java_calculator_with_GUI-master.zip><img src = "http://icons.iconarchive.com/icons/dakirby309/windows-8-metro/128/Apps-Calculator-Metro-icon.png"style = "position:relative; padding:5%; height:90%"></a></div>
+            <div class = "col-lg-4" id = "IO" style =  "margin: 5%;">
+            <div class ="container">
+            <img src = "css/images/zip-folder.png" style = "position:relative; height:12vw;">
+                <div class = "cover">
+                <p class = "desc"> <span class = "aTitle">Java file word counter </span> <br><br> Exception handling, Input/Output, Threading with locks, Runnables</p>
+            </div>
+            </div>
+        </div>
+        <div class = "col-lg-4" id = "backend" style = "margin: 5%">
+        <div class ="container">
+            <img src = "css/images/zip-folder.png" style = "position:relative; height:12vw;">
+                <div class = "cover">
+                <p class = "desc"><span class = "aTitle">Apache Website</span><br><br> Server side PHP, Error handling, Javascript, CSS, HTML</p>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- Credits for Zip icon - Icon made by FreePik @ https://www.freepik.com/ from www.flaticon.com "-->
