--- a/Website/Projects.html
+++ b/Website/Projects.html
@@ -8,12 +8,11 @@
         <link rel="stylesheet" href="css/bootstrap3.css">
         
     <!-- script -->
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="https://use.fontawesome.com/2d089818e9.js"></script>
-        <script src="jszip.min.js"></script>
-        <script src="FileSaver.min.js"></script>
-        <script src="script.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script type = "text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type = "text/javascript" src="https://use.fontawesome.com/2d089818e9.js"></script>
+        <script type = "text/javascript" src = "scripts/save.js"></script>
+
         <!-- title -->
         <title>Matthew W.L. Wu - Portfolio</title>
     <!--style-->
@@ -37,13 +36,14 @@
         </nav>
  <!-- Navigation ends here, content start now -->
  <!-- background cover for projects page -->
-  <div style = "position:relative; width:100%; text-align: center;">
+  <div style = "position:absolute; width:100%; text-align: center;">
         <!-- header to describe download functionality-->
         <div class = "row" style= " width:50%; position:relative; padding-top: 75px; padding-bottom: 25px; margin-left: 26%; text-align: center;  background-color: black;">
         <h1 style = "color:white; font-size: 26pt"> Hover for info, Click to select</h1>
     </div>
     <!-- grid layout for downloadable projects-->
      <div class="row-eq-height" id ="bgimg3" style = "border-style: dotted; border-color: black; padding-top: 5%; padding-bottom: 5%; padding-left: 25%; padding-right: 25%;">            
+        <!-- form for selecting download-->
         <!-- grid 1 for calculator-->
         <div class = "col-lg-4" style = "margin: 5%;">
             <div class ="container">
